# ark-n8n-custom-nodes

./: .build.mk.swp  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY_SETUP.md  UPGRADE.md  build.mk  devspace-start.sh  devspace-stop.sh  devspace.yaml  install.sh  manifest.yaml  package-lock.json  sonar-project.properties  troubleshooting.md  walkthrough.md
TASKS/: PHASE-1-API-KEY-FIX.md  PHASE-2-ARK-AGENT-TOOL.md  PHASE-3-ARK-WORKFLOW-TOOL.md  PHASE-4-DOCUMENTATION.md  PHASE-5-E2E-EXAMPLES.md  TASK-8-N8N-TOOL-INTEGRATION.md  TASK-9-ARK-NODE-ARCHITECTURE-FIX.md  n8n_ai_tools_integration.md
chart/: Chart.yaml  values-demo.yaml  values-testing.yaml  values.yaml
docs/: ARCHITECTURE.md  AUTO_LOGIN.md  AWS_DEPLOYMENT_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT_MODES.md  DEVELOPMENT.md  E2E_CREDENTIALS.md  FREE_API_SETUP.md  MCP_API_KEY_IMPLEMENTATION.md  MCP_API_KEY_REQUIRED_UPDATE.md  MCP_BRIDGE_ARCHITECTURE.md  MCP_CONFIG_SUMMARY.md  MCP_E2E_CHANGES.md  MCP_E2E_TESTING.md  MCP_ENV_VARS_UPDATE.md  MCP_INTEGRATION_STATUS.md  MCP_NEXT_STEPS.md  MCP_REAL_TOOLS_UPDATE.md  N8N_API_ENDPOINTS.md  N8N_API_KEY_QUICKSTART.md  N8N_API_KEY_SETUP.md  OLLAMA_TESTING.md  PRODUCTION.md  (+4 more)
mcp-server/: Dockerfile  README.md  pyproject.toml  test-env-tools.json  test-mcp-k8s.sh  test-mcp-simple.sh  test-mcp.sh  test-tools.json
mcp-server/deployment/: agent-sample.yaml  mcpserver.yaml  test-agent.yaml
mcp-server/src/: main.py
mcp-server/src/n8n_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+155 files in other folders)
