[project]
name = "n8n-mcp-server"
version = "0.1.0"
description = "MCP server that exposes n8n AI tools to ARK agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
